# autobuy

./: README.md  new_vs_used_vehicle_decision_lab.ipynb  pyproject.toml  requirements.txt
config/local/: lincoln_ne_vehicle_constants.json
config/manifests/: scenario_input_manifest.json  vehicle_input_manifest.json
config/scenarios/: example_new_vehicle_quote.json  example_used_vehicle_quote.json
config/vehicles/: example_2023_used_vehicle.json  example_2026_new_vehicle.json
scripts/: generate_notebook.py
src/autobuy/: __init__.py  analysis.py  finance_math.py  io.py
